# WindowManager

./: .gitignore  Cargo.toml  meson.build  test_compositor.sh
.claude/: settings.local.json
assets/: default_config.toml  default_rc.lua  lumie-ipc.sh  lumie-opacity-control.sh  lumie-opacity.sh  lumie-workspaces.sh  mywm-ipc.sh  mywm-opacity-control.sh  mywm-opacity.sh  mywm-workspaces.sh  wallpaper-picker.sh  wallpaper-restore.sh  wallpaper-sort.py  wallpaper-sort.sh  waybar-config-vertical.json  waybar-config.json  waybar-style.css
src/: bsp.c  bsp.h  config.rs  handlers.rs  input.c  input.h  input.rs  layout.rs  main.c  main.rs  output.c  output.h  server.c  server.h  state.rs  window.c  window.h
