[package]
name = "lumie"
version = "0.1.0"
edition = "2021"
description = "Phase 3: xdg-shell compositor hosting real Wayland clients."

[dependencies]
smithay = { git = "https://github.com/Smithay/smithay", default-features = false, features = [
    "backend_winit",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
    "desktop",
    "backend_libinput",
    "backend_session",
    "backend_session_libseat",
    "backend_udev",
    "backend_drm",
    "backend_gbm",
    
] }

toml = "0.8"

libc = "0.2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mlua = { version = "0.9", features = ["lua54", "vendored", "serialize"] }

thiserror = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3        # Maximum speed optimization
lto = "fat"          # Full cross-crate link-time optimization
codegen-units = 1    # Single codegen unit — best LLVM optimization
strip = true         # Strip debug symbols — smaller binary
panic = "abort"      # No unwinding overhead — smaller + faster